// Interfaz Element: Acepta al visitante
interface Item {
    double accept(Visitor visitor);
}
